k8s/base/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-cs-eks-generales-vehiculos-pesados
