k8s/base/01-alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: |
      arn:aws:acm:us-east-1:839093138397:certificate/8fbfea4f-63d9-4147-b2bf-a8cd309009d5,arn:aws:acm:us-east-1:839093138397:certificate/8d5aac54-bda7-41c7-8783-4256c63a98ae
    alb.ingress.kubernetes.io/group.name: microservices-k8s
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: ingress-global-k8s-v2
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    kubernetes.io/ingress.class: alb
  name: ms-generales-vehiculos-pesados-cotizador-ingress
  namespace: istio-system
spec:
  rules:
  - host: ms-generales-vehiculos-pesados-cotizador-develop.cnsv.cl
    http:
      paths:
      - backend:
          service:
            name: istio-ingressgateway
            port:
              number: 15021
        path: /healthz/ready
        pathType: Prefix
      - backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: internal-ingress-global-k8s-v2-134128658.us-east-1.elb.amazonaws.com
